advanced-examples/pod-cert-to-keystore-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mp-demo-cert
  namespace: mp-demo
spec:
  volumes:
    - name: vol
      emptyDir: {}
  containers:
    - name: mp-demo-cert
      image: evolveum/midpoint:4.4.1-alpine
      ports:
        - name: gui
          containerPort: 8080
          protocol: TCP
      volumeMounts:
        - name: vol
          mountPath: /opt/midpoint/var
          subPath: mp-home
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
