advanced-examples/statefulset-pg-native_cm-sec-nfs.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mp-pg-demo
  namespace: mp-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mp-pg-demo
  template:
    metadata:
      labels:
        app: mp-pg-demo
    spec:
      volumes:
        - name: mp-home
          emptyDir: {}
        - name: db-pass
          secret:
            secretName: mp-demo
            defaultMode: 420
        - name: mp-poi
          projected:
            sources:
            - configMap:
                name: mp-demo-poi-111-sysconf-deployment
            - configMap:
                name: mp-demo-poi-120-flexible-auth
            - configMap:
                name: mp-demo-poi-role-user-org-task
            - configMap:
                name: mp-demo-poi-ldap-res
            defaultMode: 420
        - name: nfs
          nfs:
            server: mp-demo-nfs.mp-demo.svc.cluster.local
            path: /exports
      containers:
        - name: mp-pg-demo
          image: 'evolveum/midpoint:4.4.1-alpine'
          ports:
            - name: gui
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: mp-home
              mountPath: /opt/midpoint/var
            - name: db-pass
              mountPath: /opt/midpoint/config-secrets
            - name: mp-poi
              mountPath: /opt/midpoint-dirs-docker-entrypoint/post-initial-objects
            - name: nfs
              mountPath: /opt/midpoint/var/post-initial-objects
              subPath: poi
          imagePullPolicy: IfNotPresent
  serviceName: mp-pg-demo
