advanced-examples/service-ldap.yaml
apiVersion: v1
kind: Service
metadata:
  name: mp-demo-ldap
  namespace: mp-demo
spec:
  ports:
    - name: ldap
      port: 389
  selector:
    app: mp-demo-nfs
  type: NodePort
