advanced-examples/service-nfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: mp-demo-nfs
  namespace: mp-demo
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    app: mp-demo-nfs
